# TaleStreamAI

./: .env.example  .gitignore  README.md  main.py  prompt.txt  pyproject.toml  requirements.txt
app/: audio.py  board.py  image.py  main.py  prompt.py  tool.py  tts.py  video.py  video_end.py
