[project]
name = "1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "librosa>=0.11.0",
    "moviepy>=1.0.3",
    "openai>=1.66.3",
    "pillow>=11.1.0",
    "psutil>=7.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]
